--- a/public/HTML/signUp.html
+++ b/public/HTML/signUp.html
@@ -45,14 +45,15 @@
 
     <div class="container">
         <h2>Create your account</h2>
-        <form action="#">
-            <input type="text" id="username" name="username" placeholder="Username" required>
-            <input type="email" id="email" name="email" placeholder="Email" required>
-            <input type="password" id="password" name="password" placeholder="Password" required>
-            <input type="password" id="confPassword" name="confPassword" placeholder="Confirm password" required>
-            <button type="submit" id="signUpButton">Sign up</button>
-            <a href="signin.html">Already have an account? Sign in!</a>
-        </form>
+    <form id="signUpForm" action="#">
+  <input type="email" id="email" name="email" placeholder="Email" required />
+  <input type="text" id="username" name="username" placeholder="Username" required />
+  <input type="password" id="password" name="password" placeholder="Password" required />
+  <input type="password" id="confPassword" name="confPassword" placeholder="Confirm Password" required />
+  <button type="submit" id="signUpButton">Sign Up</button>
+</form>
+
+
     </div>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
