--- a/public/HTML/signin.html
+++ b/public/HTML/signin.html
@@ -44,9 +44,9 @@
 
 <div class="container">
     <h2>Sign in</h2>
-    <form method="POST" action="">
+    <form id="signInForm" action="#">
         <input type="email" id="email" name="email" placeholder="Email" >
-        <input type="password" id="pass" name="pass" placeholder="Password" >
+        <input type="password" id="password" name="password" placeholder="Password" >
         <button type="submit" id="signInButton" class="button">Continue</button>
         <a href="signUp.html">Don't have an account? Register!</a>
         <script type="module" src="../JS/authenticate.js"></script>
