--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,13 @@
 
     <nav>
         <ul class="sidebar">
-            <li onclick="hideSidebar()"><a href="#">
+            <li onclick="hideSidebar()">
+                <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
+                </a>
+            </li>
             <li><a href="index.html">Home</a></li>
             <li><a href="HTML/products.html">Products</a></li>
             <li><a href="HTML/about.html">About</a></li>
@@ -108,8 +111,8 @@
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-firestore-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/11.6.0/firebase-auth-compat.js"></script>
-    <script src="../JS/firestore.js"></script>
-    <script src="../JS/authenticate.js"></script>
+    <script src="JS/firestore.js"></script>
+    <script src="JS/authenticate.js"></script>
     <script src="JS/userInventory.js"></script>
     <script src="JS/navbar.js"></script>
 </body>
