--- a/public/index.html
+++ b/public/index.html
@@ -54,7 +54,7 @@
     </nav>
 
 
-    <h2>My Inventory</h2>
+    <h2 id="inventory-title">My Inventory</h2>
 
     <div class="category-nav">
         <button class="category-btn" data-category="" title="All Products">
