--- a/public/products.html
+++ b/public/products.html
@@ -19,7 +19,7 @@
                 </svg>
             </a>
         </li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Inventory</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
