--- a/public/signIn.html
+++ b/public/signIn.html
@@ -12,14 +12,14 @@
 <body>
      <nav>
         <ul class="sidebar">
-        <li onclick="hideSidebar()">
+        <li onclick="hideSidebar()"><a href="#" id="hide-sidebar-btn"></a>
             <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
             </a>
         </li>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html">Inventory</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="about.html">About</a></li>
             <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
