--- a/public/OUTDATED_MATERIAL_KEEP_HERE/profileSettings.html
+++ b/public/OUTDATED_MATERIAL_KEEP_HERE/profileSettings.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>EatMeMaybe</title>
     <link rel = "stylesheet" href = "../CSS/mainview.css">
-    <link rel ="stylesheet" href ="../CSS/profileSettings-content.css">
+    <link rel ="stylesheet" href ="profileSettings-content.css">
 </head>
 <body>
     <nav>
