--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
         <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
         <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
         <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
-        <li><button class="dropbtn" id="EmptyInventoryButton"> Empty Inventory</button></li>
+        <li><button class="dropbtn" id="emptyInventoryButton"> Empty Inventory</button></li>
     </ul>
         <header>
             <ul class="logo">
@@ -54,7 +54,6 @@
                         <a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a>
                         <button class="dropbtn" id="deleteButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
-                        <button class="dropbtn" id="EmptyInventoryButton"> Empty Inventory</button>
                     </div>
                 </li>
                 <li class="menuButton" onclick="showSidebar()">
@@ -95,7 +94,7 @@
                 </button>
             </div>
 
-            <button id="EmptyInventory" class="emptyInventory-btn">Empty Inventory</button>
+            <button id="EmptyInventory" class="emptyInventoryButton">Empty Inventory</button>
         </div>
 <div class="inventory-wrapper">
   <table>
