--- a/public/products.html
+++ b/public/products.html
@@ -46,8 +46,9 @@
                         </svg> <i class="fa fa-caret-down"></i>
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
-                        <a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a>
-                        <a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a>
+                        <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
+                        <a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a>
+                        <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
                         <button class="dropbtn" id="deleteButton">Delete account</button>
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                     </div>
@@ -76,8 +77,6 @@
             <input type="text" id="search-bar" class="search-bar" placeholder="Search product name" autocomplete="off">
             <div id="ghost-suggestion" class="ghost-text"></div>
         </div>
-
-        <button type="button" class="search-btn" id="search-btn">🔍</button>
 
         <button class="nav-btn" id="add-new-product-btn">Add Custom product</button>
     </div>
