--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
         <li><a href="about.html">About</a></li>
         <li><a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a></li>
         <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
-        <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
-        <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
+        <li><button class="dropbtn" id="deleteButtonSidebar">Delete account</button></li>
+        <li><button class="dropbtn" id="signOutButtonSidebar">Sign out</button></li>
         <li><button class="dropbtn" id="emptyInventoryButton"> Empty Inventory</button></li>
     </ul>
         <header>
@@ -52,8 +52,8 @@
                     <div class="dropdown-content" id="menuDropdown">
                         <a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a>
                         <a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a>
-                        <button class="dropbtn" id="deleteButton">Delete account</button>
-                        <button class="dropbtn" id="signOutButton">Sign out</button>
+                        <button class="dropbtn" id="deleteButtonDropdown">Delete account</button>
+                        <button class="dropbtn" id="signOutButtonDropdown">Sign out</button>
                     </div>
                 </li>
                 <li class="menuButton" onclick="showSidebar()">
