--- a/public/forgotPassword.html
+++ b/public/forgotPassword.html
@@ -12,15 +12,19 @@
 <body>
     <nav>
         <ul class="sidebar">
-            <li onclick="hideSidebar()"><a href="#" id="hide-sidebar-btn">
+            <li><a href="#" id="hide-sidebar-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
             </a></li>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="products.html">Products</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="profileSettings.html">Profile</a></li>
+            <li><a href="index.html">Inventory</a></li>
+        <li><a href="products.html">Products</a></li>
+        <li><a href="about.html">About</a></li>
+        <li><a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a></li>
+        <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
+        <li><button class="dropbtn" id="deleteButtonSidebar">Delete account</button></li>
+        <li><button class="dropbtn" id="signOutButtonSidebar">Sign out</button></li>
+        <li><button class="dropbtn" id="emptyInventoryButton"> Empty Inventory</button></li>
         </ul>
         <header>
             <ul class="logo">
@@ -43,7 +47,7 @@
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                     </div>
                 </li>
-                <li class="menuButton" onclick="showSidebar()"><a href="#" id="show-sidebar-btn">
+                <li class="menuButton"><a href="#" id="show-sidebar-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
                     </svg></a></li>
@@ -61,4 +65,5 @@
 </form>
     </div>
     <script type="module" src="JS/authHandlers.js"></script>
+    <script src="JS/navbar.js"></script>
 </body>
