--- a/public/products.html
+++ b/public/products.html
@@ -12,7 +12,7 @@
 <body>
     <nav>
         <ul class="sidebar">
-        <li onclick="hideSidebar()"><a href="#" id="hide-sidebar-btn"></a>
+        <li><a href="#" id="hide-sidebar-btn"></a>
             <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
@@ -24,8 +24,8 @@
             <li><a href="about.html">About</a></li>
             <li><a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a></li>
             <li><a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a></li>
-            <li><button class="dropbtn" id="deleteButton">Delete account</button></li>
-            <li><button class="dropbtn" id="signOutButton">Sign out</button></li>
+            <li><button class="dropbtn" id="deleteButtonSidebar">Delete account</button></li>
+            <li><button class="dropbtn" id="signOutButtonSidebar">Sign out</button></li>
         </ul>
         <header>
             <ul class="logo">
@@ -47,13 +47,12 @@
                     </a>
                     <div class="dropdown-content" id="menuDropdown">
                         <a class="dropbtn" id="signInButton" href="signIn.html">Sign in</a>
-                        <a class="dropbtn" id="changeUsername-button" href="changeUsername.html">Change username</a>
                         <a class="dropbtn" id="changePassword-button" href="changePassword.html">Change password</a>
-                        <button class="dropbtn" id="deleteButton">Delete account</button>
-                        <button class="dropbtn" id="signOutButton">Sign out</button>
+                        <button class="dropbtn" id="deleteButtonDropdown">Delete account</button>
+                        <button class="dropbtn" id="signOutButtonDropdown">Sign out</button>
                     </div>
                 </li>
-                <li class="menuButton" onclick="showSidebar()"><a href="#" id="show-sidebar-btn">
+                <li class="menuButton"><a href="#" id="show-sidebar-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
                     </svg></a></li>
