--- a/public/signIn.html
+++ b/public/signIn.html
@@ -12,7 +12,7 @@
 <body>
      <nav>
         <ul class="sidebar">
-        <li onclick="hideSidebar()"><a href="#" id="hide-sidebar-btn"></a>
+        <li><a href="#" id="hide-sidebar-btn"></a>
             <a href="#">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
@@ -52,7 +52,7 @@
                         <button class="dropbtn" id="signOutButton">Sign out</button>
                     </div>
                 </li>
-                <li class="menuButton" onclick="showSidebar()"><a href="#" id="show-sidebar-btn">
+                <li class="menuButton"><a href="#" id="show-sidebar-btn">
                     <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                         <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
                     </svg></a></li>
