--- a/public/index.html
+++ b/public/index.html
@@ -1,22 +1,32 @@
 <!DOCTYPE html>
 <html lang="no">
-
 <head>
-    <meta name ="viewport" content ="width=device-width, initial-scale=1">
+
+    <!-- @author: Atle -->
+    <!-- @author: Martin N -->
+
+    <!-- Meta and page setup -->
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>EatMeMaybe - My inventory</title>
     <link rel="icon" type="image/png" href="MEDIA/EatMeMaybeLogo1.png">
-    <link rel = "stylesheet" href = "CSS/mainview.css">
-    <link rel ="stylesheet" href ="CSS/index-content.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- CSS stylesheets -->
+    <link rel="stylesheet" href="CSS/mainview.css">
+    <link rel="stylesheet" href="CSS/index-content.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" 
+          integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" 
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
 
+<!-- Navigation Sidebar and Top Header -->
 <nav>
+    <!-- Sidebar (mobile navigation) -->
     <ul class="sidebar">
-        <li onclick="hideSidebar()"><a href="#" id="hide-sidebar-btn"></a>
-            <a href="#">
+        <li onclick="hideSidebar()">
+            <a href="#" id="hide-sidebar-btn">
                 <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
                     <path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/>
                 </svg>
@@ -29,118 +39,135 @@
         <li><a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a></li>
         <li><button class="dropbtn" id="deleteButtonSidebar">Delete account</button></li>
         <li><button class="dropbtn" id="signOutButtonSidebar">Sign out</button></li>
-        <li><button class="dropbtn" id="emptyInventoryButton"> Empty Inventory</button></li>
+        <li><button class="dropbtn" id="emptyInventoryButton">Empty Inventory</button></li>
     </ul>
-        <header>
-            <ul class="logo">
-                <li><a href="index.html"><img src="MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
-            </ul>
-            <ul>
-                <li class="hideOnMobile"><a href="index.html">My Inventory</a></li>
-                <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
-                <li class="hideOnMobile"><a href="about.html">About</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropbtn" onclick="dropdownFunction()">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
-                            <path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 
-                            0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 
-                            59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 
-                            156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q53 0 100-15.5t86-44.5q-39-29-86-44.5T480-280q-53 
-                            0-100 15.5T294-220q39 29 86 44.5T480-160Zm0-360q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Zm0-60Zm0 360Z"/>
-                        </svg> <i class="fa fa-caret-down"></i>
-                    </a>
-                    <div class="dropdown-content" id="menuDropdown">
-                        <a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a>
-                        <a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a>
-                        <button class="dropbtn" id="deleteButtonDropdown">Delete account</button>
-                        <button class="dropbtn" id="signOutButtonDropdown">Sign out</button>
-                    </div>
-                </li>
-                <li class="menuButton" onclick="showSidebar()">
-                    <a href="#"><svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
-                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
-            </ul>
-        </header>
+
+    <!-- Header (desktop navigation) -->
+    <header>
+        <ul class="logo">
+            <li><a href="index.html"><img src="MEDIA/EatMeMaybeLogo2RemoveBG.png" alt="logo" class="logo-img"></a></li>
+        </ul>
+        <ul>
+            <li class="hideOnMobile"><a href="index.html">My Inventory</a></li>
+            <li class="hideOnMobile"><a href="products.html">Add Products</a></li>
+            <li class="hideOnMobile"><a href="about.html">About</a></li>
+            <li class="dropdown">
+                <a href="#" class="dropbtn" onclick="dropdownFunction()">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#e3e3e3">
+                        <path d="M234-276q51-39 114-61.5T480-360q69 0 132 22.5T726-276q35-41 54.5-93T800-480q0-133-93.5-226.5T480-800q-133 
+                        0-226.5 93.5T160-480q0 59 19.5 111t54.5 93Zm246-164q-59 0-99.5-40.5T340-580q0-59 40.5-99.5T480-720q59 0 99.5 40.5T620-580q0 
+                        59-40.5 99.5T480-440Zm0 360q-83 0-156-31.5T197-197q-54-54-85.5-127T80-480q0-83 31.5-156T197-763q54-54 127-85.5T480-880q83 0 
+                        156 31.5T763-763q54 54 85.5 127T880-480q0 83-31.5 156T763-197q-54 54-127 85.5T480-80Zm0-80q53 0 100-15.5t86-44.5q-39-29-86-44.5T480-280q-53 
+                        0-100 15.5T294-220q39 29 86 44.5T480-160Zm0-360q26 0 43-17t17-43q0-26-17-43t-43-17q-26 0-43 17t-17 43q0 26 17 43t43 17Z"/>
+                    </svg> 
+                    <i class="fa fa-caret-down"></i>
+                </a>
+                <div class="dropdown-content" id="menuDropdown">
+                    <a class="dropbtn" id="signInLink" href="signIn.html">Sign in</a>
+                    <a class="dropbtn" id="changePasswordLink" href="changePassword.html">Change password</a>
+                    <button class="dropbtn" id="deleteButtonDropdown">Delete account</button>
+                    <button class="dropbtn" id="signOutButtonDropdown">Sign out</button>
+                </div>
+            </li>
+            <li class="menuButton" onclick="showSidebar()">
+                <a href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" height="26px" viewBox="0 -960 960 960" width="26px" fill="#e8eaed">
+                        <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/>
+                    </svg>
+                </a>
+            </li>
+        </ul>
+    </header>
 </nav>
 
-    <!-- Div with message and buttons which appear if the user has not signed in -->
-    <div class="auth-message" id="auth-message" style="display: none;"> <p>Oops, it looks like you're not signed in. Sign in or create an account to view your inventory.</p>
-        <div class="button-group">
-            <button onclick="window.location.href='signIn.html'">Sign in</button>
-            <button onclick="window.location.href='signUp.html'">Create account</button>
-        </div>
+<!-- Authentication prompt if user is not signed in -->
+<div class="auth-message" id="auth-message" style="display: none;">
+    <p>Oops, it looks like you're not signed in. Sign in or create an account to view your inventory.</p>
+    <div class="button-group">
+        <button onclick="window.location.href='signIn.html'">Sign in</button>
+        <button onclick="window.location.href='signUp.html'">Create account</button>
     </div>
-
-    <!-- Div for wrapping all the main content of the page and hide it until the user has signed in -->
-    <div id="main-content" style="display: none;">
-        <h2 id="inventory-title">My Inventory</h2>
-
-        <div class="top-bar">
-            <div class="category-nav">
-                <button class="category-btn" data-category="" title="All Products">
-                    <img src="MEDIA/grocery-cart.png" alt="All">
-                </button>
-                <button class="category-btn" data-category="Fruits and Vegetables" title="Fruits and Vegetables">
-                    <img src="MEDIA/vegetable.png" alt="Fruits and Vegetables">
-                </button>
-                <button class="category-btn" data-category="Cooling Products" title="Cooling Products">
-                    <img src="MEDIA/fridge.png" alt="Cooling">
-                </button>
-                <button class="category-btn" data-category="Frozen Products" title="Frozen Products">
-                    <img src="MEDIA/frozen.png" alt="Frozen">
-                </button>
-                <button class="category-btn" data-category="Dry Products" title="Dry Products">
-                    <img src="MEDIA/spices.png" alt="Dry">
-                </button>
-            </div>
-
-            <button class="emptyInventory-btn" id="deleteInventoryButton" >Delete Inventory</button>
-        </div>
-<div class="inventory-wrapper">
-  <table>
-    <thead>
-      <tr>
-        <th>Category</th>
-        <th>Product</th>
-        <th>Quantity</th>
-        <th>Date Added</th>
-        <th>Expires In</th>
-        <th>Modify</th>
-      </tr>
-    </thead>
-    <tbody id="inventory-table-body">
-      <!-- Dynamisk JS-innhold -->
-    </tbody>
-  </table>
 </div>
 
-        <!-- Message which shows if the user inventory table is empty -->
-        <div class="empty-table-wrapper">
-            <div class="inventory-message" id="empty-inventory-message">
-                <p>It is empty here! Start adding products to fill it up!</p>
-                <button onclick="window.location.href='products.html'">Add products</button>
-            </div>
+<!-- Main content container, hidden by default until authentication -->
+<div id="main-content" style="display: none;">
+
+    <!-- Page title -->
+    <h2 id="inventory-title">My Inventory</h2>
+
+    <!-- Top bar with category filter and delete button -->
+    <div class="top-bar">
+        <div class="category-nav">
+            <button class="category-btn" data-category="" title="All Products">
+                <img src="MEDIA/grocery-cart.png" alt="All">
+            </button>
+            <button class="category-btn" data-category="Fruits and Vegetables" title="Fruits and Vegetables">
+                <img src="MEDIA/vegetable.png" alt="Fruits and Vegetables">
+            </button>
+            <button class="category-btn" data-category="Cooling Products" title="Cooling Products">
+                <img src="MEDIA/fridge.png" alt="Cooling">
+            </button>
+            <button class="category-btn" data-category="Frozen Products" title="Frozen Products">
+                <img src="MEDIA/frozen.png" alt="Frozen">
+            </button>
+            <button class="category-btn" data-category="Dry Products" title="Dry Products">
+                <img src="MEDIA/spices.png" alt="Dry">
+            </button>
         </div>
-
-        <div id="status-message"></div>
-
-        <template id="inventory-row-template">
-            <tr>
-                <td class="product-category"></td>
-                <td class="product-name"></td>
-                <td class="product-quantity"></td>
-                <td class="product-added-at"></td>
-                <td class="product-days-left"></td>
-                <td>
-                    <button class="increase-btn">➕</button>
-                    <button class="decrease-btn">➖</button>
-                    <button class="delete-btn">❌</button>
-                </td>
-            </tr>
-        </template>
+        <button class="emptyInventory-btn" id="deleteInventoryButton">Delete Inventory</button>
     </div>
-    <script type="module" src="JS/authHandlers.js"></script>
-    <script type="module" src="JS/userInventory.js"></script>
-    <script src="JS/navbar.js"></script>
+
+    <!-- Inventory table (populated by JavaScript) -->
+    <div class="inventory-wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <th>Category</th>
+                    <th>Product</th>
+                    <th>Quantity</th>
+                    <th>Date Added</th>
+                    <th>Expires In</th>
+                    <th>Modify</th>
+                </tr>
+            </thead>
+            <tbody id="inventory-table-body">
+                <!-- JavaScript will insert rows here -->
+            </tbody>
+        </table>
+    </div>
+
+    <!-- Message shown if inventory is empty -->
+    <div class="empty-table-wrapper">
+        <div class="inventory-message" id="empty-inventory-message">
+            <p>It is empty here! Start adding products to fill it up!</p>
+            <button onclick="window.location.href='products.html'">Add products</button>
+        </div>
+    </div>
+
+    <!-- Status message container -->
+    <div id="status-message"></div>
+
+    <!-- Template for dynamic table rows -->
+    <template id="inventory-row-template">
+        <tr>
+            <td class="product-category"></td>
+            <td class="product-name"></td>
+            <td class="product-quantity"></td>
+            <td class="product-added-at"></td>
+            <td class="product-days-left"></td>
+            <td>
+                <button class="increase-btn">➕</button>
+                <button class="decrease-btn">➖</button>
+                <button class="delete-btn">❌</button>
+            </td>
+        </tr>
+    </template>
+</div>
+
+<!-- JavaScript imports -->
+<script type="module" src="JS/authHandlers.js"></script>
+<script type="module" src="JS/userInventory.js"></script>
+<script src="JS/navbar.js"></script>
+
 </body>
 </html>
