--- a/public/products.html
+++ b/public/products.html
@@ -164,7 +164,7 @@
 
     <!-- JavaScript imports -->
     <script type="module" src="JS/authHandlers.js"></script>
-    <script type="module" src= "JS/search.js"></script>
+    <script type="module" src= "JS/products.js"></script>
     <script src="JS/navbar.js"></script>
 </body>
 </html>
